--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,17 @@
+.app {
+  margin:0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+}
 
+.gamebox {
+  width: 600px;
+  height: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  border: solid 5px plum;
+}
