--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,15 @@
   height: 600px;
   display: flex;
   flex-wrap: wrap;
-  border: solid 5px plum;
+  border: solid 4px plum;
+}
+
+.square {
+  width: 200px;
+  height: 200px;
+  border: solid 2px plum;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
