--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,38 @@
   justify-content: center;
   align-items: center;
 }
+
+.circle {
+  height: 180px;
+  width: 180px;
+  border-radius: 50%;
+  border: 15px solid aqua;
+  box-sizing: border-box;
+}
+
+.cross {
+ width: 180px; 
+ height: 180px;
+ position: relative;
+ transform: rotate(45deg);
+}
+
+.cross:before, .cross::after {
+  content: '';
+  position: absolute;
+  background-color: lightcoral;
+}
+
+.cross:before {
+  left: 50%;
+  width: 30%;
+  margin-left: -15%;
+  height: 100%;
+}
+
+.cross:after {
+  top: 50%;
+  height: 30%;
+  margin-top: -15%;
+  width: 100%;
+}
