--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   align-items: center;
   height: 100vh;
   flex-direction: column;
+  background-color: blueviolet;
 }
 
 .gamebox {
@@ -59,4 +60,15 @@
   height: 30%;
   margin-top: -15%;
   width: 100%;
+}
+
+.changing {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 40px;
+  color: chartreuse;
+}
+.fonting {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 40px;
+  color: chartreuse;
 }
